# crawlset

./: .env.example  .gitignore  ARCHITECTURE_COMPARISON.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MD_SPEC.md  CODE_OF_CONDUCT.md  COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT.md  FIXES_AND_IMPROVEMENTS.md  LICENSE  MARKETING_LAUNCH.md  OPEN_SOURCE_PREP.md  QUICK_START_GUIDE.md  README.md  RUVECTOR_DEEP_DIVE.md  SECURITY.md  SYSTEM_SUMMARY.md  TEST_REPORT.md  TEST_REPORT_FINAL.md  UX_ARCHITECTURE_WISHLIST.md  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.bak
backend/: .dockerignore  .env.example  API_ROUTES.md  ARCHITECTURE.md  BACKEND_SETUP.md  CRAWLER_README.md  DISTRIBUTED_PROCESSING.md  Dockerfile  Dockerfile.api  Dockerfile.beat  Dockerfile.flower  Dockerfile.worker  FRONTEND_COMPONENTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICK_START.md  RUVECTOR_INTEGRATION.md  STRUCTURE.txt  WEBSETS_README.md  pyproject.toml  requirements.txt  verify_distributed_setup.py  verify_setup.py
backend/requirements/: base.txt  dev.txt  flower.txt  worker.txt
backend/src/: __init__.py  config.py
backend/src/api/: main.py
backend/src/crawler/: __init__.py  browser.py  proxy_pool.py  rate_limiter.py
backend/src/database/: __init__.py  connection.py  models.py
backend/src/enrichments/: __init__.py  engine.py
backend/src/extractors/: __init__.py  llm_router.py  prompt_extractor.py  requesty_client.py  schema_extractor.py
backend/src/monitors/: __init__.py  behaviors.py  executor.py  scheduler.py
backend/src/parser/: __init__.py  (+4 more)
backend/tests/: conftest.py  test_e2e_smoke.py  test_milvus.py  test_monitors_oneshot.py  test_ruvector.py  test_websets_research.py
ruvector-service/: Cargo.toml  Dockerfile
ruvector-service/src/: main.rs
(+81 files in other folders)
