[tool.poetry]
name = "intelligence-backend"
version = "0.1.0"
description = "Web intelligence backend: crawl, parse, extract, store in RuVector, and monitor websets."
authors = ["operationTorque Team <dev@operationtorque.local>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
httpx = "^0.27.0"
playwright = "^1.46.0"
trafilatura = "^1.9.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.8.0"
celery = "^5.4.0"
redis = "^5.0.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
